--- a/portfolio.html
+++ b/portfolio.html
@@ -15,6 +15,7 @@
         <a class="webstudio-header" href=""><span>Web</span>Studio</a>
     <nav>
         <ul>
+            <li><a href="./homework.html">Дз</a></li>
             <li><a href="./">Студія</a></li>
             <li><a href="./portfolio.html">Портфоліо</a></li>
             <li><a href="">Контакти</a></li>
